<resources>
    <string name="app_name">GoodDay</string>
    <string name="label1_1">Outdoor</string>
    <string name="label1_2">Move</string>
    <string name="label1_3">Love</string>
    <string name="label1_4">Money</string>
    <string name="label2_1">Korea</string>
    <string name="label2_2">Seoul</string>
    <string name="label2_3">Jeju</string>
    <string name="label2_4">Gangwon</string>
    <string name="have_a_good_day">Have a Good Day!</string>
    <string name="question_article1">What do you do?</string>
    <string name="question_article2">Where do you go?</string>
    <string name="question_month">What month?</string>
    <string name="title">Have a Good Day!</string>
    <string name="secondary_text">최근 30년 간의 날씨통계 정보와 음양오행 풍습을 고려하여 좋은 날을 꼽아 드립니다.선정 된 좋은 날들 가운데 맘에 드는 문향과 색깔의 날짜카드가 바로 당신의 좋은 날입니다.</string>
    <string name="headTitle">Month</string>
    <string name="goodday_details_title">Good Day Detail</string>
    <string name="option_1">Jan</string>
    <string name="option_2">Feb</string>
    <string name="option_3">Mar</string>
    <string name="option_4">Apr</string>
    <string name="option_5">May</string>
    <string name="option_6">Jun</string>
    <string name="option_7">Jul</string>
    <string name="option_8">Aug</string>
    <string name="option_9">Sep</string>
    <string name="option_10">Oct</string>
    <string name="option_11">Nov</string>
    <string name="option_12">Dec</string>
    <string name="label">Select a Month</string>
    <string name="cancel">CANCEL</string>
    <string name="decline">DECLINE</string>
    <string name="accept">OK</string>
    <string name="supporting_text">30년간의 기상청 날씨 통계치와 한국의 음양학설에 기반하여 선정한 운수 좋은날 중 하나입니다.</string>
    <string name="year">2021년</string>

    //monthMenu
    <string-array name="month_menu">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <string name="theme_name_hint">Theme name…</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Main-->
    <string name="tab_title_instructions">Instructions</string>
    <string name="tab_title_components">Components</string>
    <string name="tab_title_theme_summary">Theme summary</string>

    <!--Instructions-->
    <string name="instructions_how_to">Build your own custom Material Theme by remixing and styling these themeable components.\n\nModify the variables in your project\'s color.xml, type.xml and shape.xml files to see your custom styles cascade through Material Components for Android.</string>
    <string name="instructions_how_to_title">How to use theme builder</string>
    <string name="instructions_options_title">Theme builder options</string>
    <string name="instructions_enable_dark_title">Enable dark theme</string>

    <!--Component-->
    <string name="text_headline_6">Headline 6</string>
    <string name="text_body_2">Body 2</string>
    <string name="text_button">Button</string>
    <string name="text_overline">Overline</string>

    <string name="button_label_title">Button</string>
    <string name="button_left_button_label">Left</string>
    <string name="button_center_button_label">Center</string>
    <string name="button_right_button_label">Right</string>

    <string name="fab_label_title">FAB</string>

    <string name="card_label_title">Card</string>

    <string name="chip_label_title">Chips</string>
    <string name="chip_action_title">Action</string>
    <string name="chip_filter_title">Filter</string>
    <string name="chip_choice_title">Choice</string>
    <string name="chip_entry_title">Entry</string>

    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>

    <string name="drawer_label_title">Drawer</string>

    <string name="text_field_label_title" description="Label text for a text field [CHAR LIMIT=50]">Text field</string>
    <string name="text_field_hint_text">Label</string>

    <string name="bottom_nav_label_title">Bottom navigation</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_music_title">Music</string>
    <string name="bottom_nav_places_title">Places</string>
    <string name="bottom_nav_news_title">News</string>

    <string name="switch_label_title">Switch</string>

    <string name="radio_button_label_title">Radio button</string>

    <string name="checkbox_label_title">Checkbox</string>

    <string name="bottom_app_bar_label_title">Bottom app bar</string>

    <string name="tabs_label_title">Tabs</string>

    <string name="snackbar_label_title">Snackbar</string>
    <string name="snackbar_message_text">Marked as favorite</string>
    <string name="snackbar_action_text">Action</string>

    <string name="dialog_label_title">Dialog</string>
    <string name="dialog_button_label">Show dialog</string>

    <string name="bottom_sheet_label_title">Bottom sheet</string>
    <string name="bottom_sheet_button_label">Show bottom sheet</string>

    <string name="image_label_title">Image</string>

    <!--Theme Summary-->
    <string name="label_color_scheme_title">Color scheme</string>

    <string name="label_shape_system_title">Shape system</string>
    <string name="shape_appearance_small_label">S</string>
    <string name="shape_appearance_medium_label">M</string>
    <string name="shape_appearance_large_label">L</string>

    <string name="label_typography_scale_title">Typography scale</string>
    <string name="text_appearance_h1_label">H1</string>
    <string name="text_appearance_h2_label">H2</string>
    <string name="text_appearance_h3_label">H3</string>
    <string name="text_appearance_h4_label">H4</string>
    <string name="text_appearance_h5_label">H5</string>
    <string name="text_appearance_h6_label">H6</string>
    <string name="text_appearance_subtitle_1_label">Subtitle 1</string>
    <string name="text_appearance_subtitle_2_label">Subtitle 2</string>
    <string name="text_appearance_body_1_label">Body 1</string>
    <string name="text_appearance_body_2_label">Body 2</string>
    <string name="text_appearance_button_label">Button</string>
    <string name="text_appearance_caption_label">Caption</string>
    <string name="text_appearance_overline_label">Overline</string>
    <string name="KoreanMonth">월</string>
    <string name="fishLogo">Fish Log</string>
    <string name="CurruntYear">Current Year</string>
    <string name="CurrentYear">0000</string>
    <string name="CurrentMonth">Month</string>
    <string name="koreanYear">년</string>
    <string name="korean_title">좋은날을 찾아라!</string>
    <string name="sub_title">날씨도 좋고 기분도 좋고 손도 없고...</string>
</resources>