<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/main_image_prediction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean_title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sub_title"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/yearTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/CurrentYear"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:text="@string/koreanYear"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/label">

                <AutoCompleteTextView
                    android:id="@+id/monthAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:inputType="none"
                    android:labelFor="@+id/menu" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:checkedButton="@+id/radio_button1_1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label1_1"
                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label1_2"
                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:text="@string/label1_3"

                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button1_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:text="@string/label1_4"
                        app:buttonTint="@color/purple_500" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:checkedButton="@+id/radio_button2_1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label2_1"
                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label2_2"
                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button2_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label2_3"
                        app:buttonTint="@color/purple_500" />

                    <RadioButton
                        android:id="@+id/radio_button2_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label2_4"
                        app:buttonTint="@color/purple_500" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/getBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/have_a_good_day"
            app:icon="@drawable/ic_baseline_search_24" />

    </LinearLayout>

</LinearLayout>

